<resources>
    <string name="app_name">english</string>
    <string name="username_limit">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="login">登\t\t\t录</string>
    <string name="go_register">没有账号？点击注册</string>
    <string name="hint_username">请输入手机号</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_verify">请输入验证码</string>
    <string name="hint_repassword">请再次输入密码</string>
    <string name="go_login">已有账号？去登录</string>
    <string name="register">注\t\t\t册</string>
    <string name="problem">在项目中的编写你的需求,还是在你的assets文件下放一个sample.pdf的文件，在java代码中编写需求</string>
    <string name="option">这是什么东西</string>
    <string name="type">阅读理解</string>
    <string name="hint_name">请输入姓名</string>
    <string name="listen">听力练习</string>
    <string name="translate">翻译练习</string>
    <string name="writer">写作练习</string>
    <string name="writer_problem">Suppose you are asked to give advice on whether to attend college at home or abroad, write an essay to state your opinion. You are required to write at least 150 words but no more than 200 words.</string>
    <string name="writer_answer">Nowadays, there has been a heated discussion as to a better choice between attending college at home and abroad. Views on the topic vary greatly among people from different walks of life.Some believe that it is a better choice to study in domestic colleges, but others consider it better to study abroad. I totally agree with the latter idea for the reasons presented below. To begin with, it harms the society in that the greater the competition is, the higher the recruitment requirements will become.Therefore, with experiences of studying abroad, graduates will become more competitive in job hunting. Furthermore, it is beneficial to the students themselves to study abroad. Without the choice to pursue overseas study, many great scholars today would never have achieved such great success.From my perspective, it is crucial that the government should encourage people to pursue overseas study. Also it is crucial that people should understand the meaning and value of attending college abroad.Only in this way can we achieve greater success.</string>
    <string name="level">四级</string>
    <string name="show_answer">查看答案</string>
    <string name="answer">答案：A</string>
    <string name="jiexi">解析：这里是试题解析</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">首页</string>
    <string name="project">课程</string>
    <string name="note">单词</string>
    <string name="mine">我的</string>
    <string name="logout">退出登录</string>
</resources>
