<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">
    <TextView
        android:text="@string/problem"
        android:textSize="18sp"
        android:padding="10dp"
        android:textColor="@color/text_content"
        android:id="@+id/problem_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/option"
            android:id="@+id/anwser_a"
            style="@style/option_style" />
        <TextView
            android:id="@+id/anwser_b"
            style="@style/option_style" />
        <TextView
            android:id="@+id/anwser_c"
            style="@style/option_style" />
        <TextView
            android:id="@+id/anwser_d"
            style="@style/option_style" />
    </LinearLayout>
    <TextView
        android:padding="8dp"
        android:layout_marginRight="18dp"
        android:layout_gravity="right"
        android:id="@+id/answer"
        android:textColor="@color/red"
        android:text="@string/show_answer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />
    <TextView
        android:visibility="gone"
        android:layout_marginBottom="18dp"
        android:id="@+id/item_jiexi"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@color/red"
        android:text="@string/jiexi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>