<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/layout_title"/>
    <FrameLayout
        android:id="@+id/frag_container"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

    </FrameLayout>
    <RadioGroup
        android:id="@+id/bottom"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="64dp">
        <LinearLayout
            android:id="@+id/ll_home"
            style="@style/home_bottom">
            <RadioButton
                android:id="@+id/rb_home"
                android:checked="true"
                android:background="@drawable/selector_home"
                style="@style/rb_style" />
            <TextView
                android:text="@string/home"
                style="@style/tv_style" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_project"
            style="@style/home_bottom">
            <RadioButton
                android:id="@+id/rb_project"
                android:background="@drawable/selector_note"
                style="@style/rb_style" />
            <TextView
                android:text="@string/project"
                style="@style/tv_style" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_note"
            style="@style/home_bottom">
            <RadioButton
                android:id="@+id/rb_note"
                android:background="@drawable/selector_snote"
                style="@style/rb_style" />
            <TextView
                android:text="@string/note"
                style="@style/tv_style" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_mine"
            style="@style/home_bottom">
            <RadioButton
                android:id="@+id/rb_mine"
                android:background="@drawable/selector_mine"
                style="@style/rb_style" />
            <TextView
                android:text="@string/mine"
                style="@style/tv_style" />
        </LinearLayout>
    </RadioGroup>
</LinearLayout>