<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FragmentActivity">

    <include layout="@layout/layout_title"/>
    <android.support.v4.view.ViewPager
        android:id="@+id/frag_container"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

    </android.support.v4.view.ViewPager>
    <TextView
        android:background="@color/gary"
        android:layout_width="match_parent"
        android:layout_height="1dp" />
    <LinearLayout
        android:id="@+id/bottom"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="64dp">
        <LinearLayout
            android:id="@+id/ll_home"
            style="@style/home_bottom">
            <ImageView
                android:id="@+id/rb_home"
                android:src="@drawable/selector_home"
                style="@style/rb_style" />
            <TextView
                android:text="@string/home"
                style="@style/tv_style" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_project"
            style="@style/home_bottom">
            <ImageView
                android:id="@+id/rb_project"
                android:src="@drawable/selector_note"
                style="@style/rb_style" />
            <TextView
                android:text="@string/project"
                style="@style/tv_style" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_note"
            style="@style/home_bottom">
            <ImageView
                android:id="@+id/rb_note"
                android:src="@drawable/selector_snote"
                style="@style/rb_style" />
            <TextView
                android:text="@string/note"
                style="@style/tv_style" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_mine"
            style="@style/home_bottom">
            <ImageView
                android:id="@+id/rb_mine"
                android:src="@drawable/selector_mine"
                style="@style/rb_style" />
            <TextView
                android:text="@string/mine"
                style="@style/tv_style" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>