<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ui.WriterActivity">
    <include layout="@layout/layout_title"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginBottom="1dp"
                android:background="@color/white"
                android:id="@+id/writer_problem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/writer_problem"
                android:textSize="18sp" />
            <TextView
                android:background="@color/gary"
                android:layout_width="match_parent"
                android:layout_height="1dp" />
            <TextView
                android:padding="8dp"
                android:layout_marginRight="18dp"
                android:layout_gravity="right"
                android:id="@+id/answer"
                android:textColor="@color/red"
                android:text="@string/show_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:visibility="gone"
                android:background="@color/white"
                android:id="@+id/show_answer"
                android:textSize="16sp"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/writer_answer" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>