<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">
    <include layout="@layout/layout_title"/>
    <LinearLayout
        android:id="@+id/listen"
        android:layout_marginBottom="1dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/white"
        android:layout_height="48dp">
        <TextView
            android:gravity="center"
            android:text="@string/listen"
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <ImageView
            android:src="@mipmap/icon_right_gray"
            android:layout_width="32dp"
            android:layout_height="32dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/reader"
        android:layout_marginBottom="1dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/white"
        android:layout_height="48dp">
        <TextView
            android:gravity="center"
            android:text="@string/type"
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <ImageView
            android:src="@mipmap/icon_right_gray"
            android:layout_width="32dp"
            android:layout_height="32dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/translate"
        android:layout_marginBottom="1dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/white"
        android:layout_height="48dp">
        <TextView
            android:gravity="center"
            android:text="@string/translate"
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <ImageView
            android:src="@mipmap/icon_right_gray"
            android:layout_width="32dp"
            android:layout_height="32dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/writer"
        android:layout_marginBottom="1dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/white"
        android:layout_height="48dp">
        <TextView
            android:gravity="center"
            android:text="@string/writer"
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <ImageView
            android:src="@mipmap/icon_right_gray"
            android:layout_width="32dp"
            android:layout_height="32dp" />
    </LinearLayout>
</LinearLayout>