<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <include layout="@layout/layout_title"/>
    <LinearLayout
        android:weightSum="4"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:padding="16dp"
        android:background="@color/white"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="80dp"
        android:layout_weight="3"
        android:id="@+id/login_container"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent">
        <EditText
            android:digits="@string/username_limit"
            android:drawableLeft="@mipmap/icon_username"
            android:id="@+id/et_login_username"
            style="@style/et_login_style" />
        <EditText
            android:drawableLeft="@mipmap/icon_password"
            android:inputType="textPassword"
            android:id="@+id/et_login_password"
            style="@style/et_login_style" />
        <LinearLayout
            android:weightSum="3"
            android:orientation="horizontal"
            style="@style/et_login_style">
            <EditText
                android:layout_weight="2"
                android:inputType="number"
                android:background="@color/white"
                android:drawableLeft="@mipmap/icon_verify"
                android:id="@+id/et_login_verify"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:width="0dp"
                />
            <ImageView
                android:scaleType="fitXY"
                android:src="@mipmap/code"
                android:id="@+id/iv_verify"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
        </LinearLayout>
        <Button
            android:layout_marginTop="24dp"
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/btn_bg"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp"
            />
        <Button
            android:id="@+id/btn_register"
            android:background="@null"
            android:textSize="16sp"
            android:textColor="@color/red"
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    </LinearLayout>
</LinearLayout>